--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,58 @@
     tools:context=".MainActivity">
 
     <View
+        android:id="@+id/view"
         android:background="@color/katrina"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/migo.png"
+        android:layout_width="191dp"
+        android:layout_height="210dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="220dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:layout_marginBottom="181dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_wave__1_"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="300dp" />
+        app:layout_constraintTop_toBottomOf="@+id/view" />
+
+
+
+    <TextView
+        android:id="@+id/TextView"
+        android:layout_width="361dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:lineSpacingExtra="4dp"
+        android:text="Learning an Android Programming is a great advantage!!!"
+        android:textAlignment="center"
+        android:textColor="#160E2C"
+        android:textSize="20sp"
+        android:translationX="-200dp"
+        android:translationY="550dp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.924"
+        app:layout_constraintStart_toEndOf="@+id/view"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_editor_absoluteX="25dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
